# textagon

./: CHANGELOG.md  README.md  pyproject.toml  setup.py  todo.txt
docs/: conf.py  index.rst
examples/: 1-run_textagon.ipynb  2-calculate_informativeness.ipynb  3-classification_with_textagon.ipynb  calculate_diff.ipynb  interactiveApp.py  process-text.py  run_long.sh  run_textagon.ipynb  running_example.ipynb  test_pip.ipynb
examples/Lexicons/lexicon_v5/: ADR.txt  AILEXCAT.txt  AILEXINT.txt  EMOLEX.txt  GLOVECC.txt  GLOVETW.txt  GLOVEWG.txt  SAVLEX.txt
examples/sample_data/: distress_raw.txt  dvd.txt
examples/sample_data/textagon_sample/: Affect_result.csv  Hypernym_result.csv  Legomena_result.csv  LexiconADR_result.csv  LexiconAILEXCAT_result.csv  LexiconAILEXINT_result.csv  LexiconEMOLEX_result.csv  LexiconGLOVECC_result.csv  LexiconGLOVETW_result.csv  LexiconGLOVEWG_result.csv  LexiconLIWC_result.csv  LexiconSAVLEX_result.csv  LexiconSYN_result.csv  Misspelling_result.csv  NER_result.csv  POS_result.csv  Sentiment_result.csv  Stats.csv  Word&NER_result.csv  Word&POS_result.csv  Word&Sense_result.csv  Word_result.csv  distress_binary_Boundaries_feature_matrix.pickle  distress_binary_LexiconGLOVECC_feature_matrix.pickle  distress_key.txt  (+14 more)
textagon/: AFRN.py  install-dependencies.py  post_install.py  process-text.py  pyvenv.cfg  test_pip.ipynb  textagon.py  utils.py  wnaffect.py
textagon/data/: sentiscores.txt
textagon/devel/: CustomWNA.ipynb  textagon-devel-notes.txt
textagon/docs/: changelog.txt  readme.txt
textagon/examples/: script.bat  script.sh
(+58 files in other folders)
