[tool.poetry]
name = "textagon"
version = "0.1.18"
description = "Textagon is a powerful tool for text data analysis, providing a means to visualize parallel representations of your data and gain insight into the impact of various lexicons on two classes of text data."
authors = ['Ahmed Abbasi <aabbasi@nd.edu>', 'David Dobolyi <david.dobolyi@colorado.edu>', 'John P. Lalor <john.lalor@nd.edu>', 'Ruiyang Qin <rqin@nd.edu>']
license = "MIT LIcense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
nltk = ">=3.8.1"
scikit-learn = ">=1.2.1"
pandas = ">=1.5.3"
numpy = ">=1.24.2"
beautifulsoup4 = ">=4.11.2"
mapply = ">=0.1.21"
pyenchant = ">=3.2.2"
tzlocal = ">=4.3"
spacy = ">=3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
